Update the title and typos in EDA.ipynb

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1853,7 +1853,7 @@
    "source": [
     "# Crea boxplot de la distibución de precios.\n",
     "fig2 = px.box(vehicles, x='price', \n",
-    "              title='Boxplot de Precios de Vehiculos', \n",
+    "              title='Boxplot de Precios de Vehículos', \n",
     "              labels={'price' : 'Precio (USD)'},\n",
     "              color_discrete_sequence=['pink']\n",
     "              )\n",
@@ -5408,7 +5408,7 @@
    "id": "c1da351d",
    "metadata": {},
    "source": [
-    "## Conclución"
+    "## Conclusión"
    ]
   },
   {
