Update EDA.ipynb test2

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1865,7 +1865,7 @@
    "id": "24742ca7",
    "metadata": {},
    "source": [
-    "Al analizar la distribución de los precios de los vehículos, se puede deducir que la el 75% de los vehículos tiene un precio entre \\$5,000 y '$20,000 USD', con una media de \\$9,000 USD, lo que sugiere un mercado concentrado en vehículos económicos y de gama media. Se detectaron valores atípicos extremos en \\$189,000, \\$300,000 y \\$375,000 USD. Estos podrían corresponder a vehículos de lujo como deportivos y clásicos. El histograma muestra una asimetría positiva, indicando que hay pocos vehículos con precios muy altos en comparación con la mayoría"
+    "Al analizar la distribución de los precios de los vehículos, se puede deducir que la el 75% de los vehículos tiene un precio entre '$5,000' y '$20,000 USD', con una media de \\$9,000 USD, lo que sugiere un mercado concentrado en vehículos económicos y de gama media. Se detectaron valores atípicos extremos en \\$189,000, \\$300,000 y \\$375,000 USD. Estos podrían corresponder a vehículos de lujo como deportivos y clásicos. El histograma muestra una asimetría positiva, indicando que hay pocos vehículos con precios muy altos en comparación con la mayoría"
    ]
   },
   {
