--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1865,7 +1865,7 @@
    "id": "24742ca7",
    "metadata": {},
    "source": [
-    "Al analizar la distribución de los precios de los vehículos, se puede deducir que la el 75% de los vehículos tiene un precio entre '$5,000' y '$20,000 USD', con una media de \\$9,000 USD, lo que sugiere un mercado concentrado en vehículos económicos y de gama media. Se detectaron valores atípicos extremos en \\$189,000, \\$300,000 y \\$375,000 USD. Estos podrían corresponder a vehículos de lujo como deportivos y clásicos. El histograma muestra una asimetría positiva, indicando que hay pocos vehículos con precios muy altos en comparación con la mayoría"
+    "Al analizar la distribución de los precios de los vehículos, se puede deducir que la el 75% de los vehículos tiene un precio entre 5,000 y 20,000 USD, con una media de 9,000 USD, lo que sugiere un mercado concentrado en vehículos económicos y de gama media. Se detectaron valores atípicos extremos en 189,000, 300,000 y 375,000 USD. Estos podrían corresponder a vehículos de lujo como deportivos y clásicos. El histograma muestra una asimetría positiva, indicando que hay pocos vehículos con precios muy altos en comparación con la mayoría"
    ]
   },
   {
@@ -2762,7 +2762,7 @@
    "id": "e1172fd4",
    "metadata": {},
    "source": [
-    "Al analizar la relación entre el precio y el kilometraje de los vehículos se concluye que a mayor kilometraje el precio disminuye, esta es una correlación negativa, esto se evidencia en la tendencia descendente de la línea de regresión, se puede observar que hay algunas excepciones donde vehículos con gran kilometraje mantiene un precio alto esto se puede ver en el kilometraje de 1M. La mayoría de los datos se concentran en un rango de 0 a 200,000 millas con un precio de \\$5,000 a \\$50,000 USD."
+    "Al analizar la relación entre el precio y el kilometraje de los vehículos se concluye que a mayor kilometraje el precio disminuye, esta es una correlación negativa, esto se evidencia en la tendencia descendente de la línea de regresión, se puede observar que hay algunas excepciones donde vehículos con gran kilometraje mantiene un precio alto esto se puede ver en el kilometraje de 1M. La mayoría de los datos se concentran en un rango de 0 a 200,000 millas con un precio de 5,000 a 50,000 USD."
    ]
   },
   {
@@ -4524,7 +4524,7 @@
    "id": "d78d8b07",
    "metadata": {},
    "source": [
-    "Al analizar el precio promedio por el tipo de combustible se concluye que los vehículos con combustible de diesel son los que tienen el precio más alto llegando a \\$22,000 USD, los segundos más altos son los vehículos de gas con un precio de \\$11,000 USD estando significativamente más alto a comparación con los vehículos eléctricos (\\$7,033 USD) e híbridos (\\$7,502) lo cual contradice la tendencia global que estos autos suelen a ser más costosos. Algunas posibles explicaciones para esto son que puede haber algunos sesgos en los datos, como incluir principalmente vehículos eléctricos/híbridos antiguos o con alta depreciación, y los autos a gasolina podrían ser modelos premium (ej: camionetas grandes, SUV) que inflan el promedio. "
+    "Al analizar el precio promedio por el tipo de combustible se concluye que los vehículos con combustible de diesel son los que tienen el precio más alto llegando a 22,000 USD, los segundos más altos son los vehículos de gas con un precio de \\$11,000 USD estando significativamente más alto a comparación con los vehículos eléctricos (7,033 USD) e híbridos (7,502) lo cual contradice la tendencia global que estos autos suelen a ser más costosos. Algunas posibles explicaciones para esto son que puede haber algunos sesgos en los datos, como incluir principalmente vehículos eléctricos/híbridos antiguos o con alta depreciación, y los autos a gasolina podrían ser modelos premium (ej: camionetas grandes, SUV) que inflan el promedio. "
    ]
   },
   {
@@ -5399,7 +5399,7 @@
    "id": "62a4eefc",
    "metadata": {},
    "source": [
-    "Al analizar los días que un vehículo permanece en el mercado, se puede deducir que la distribución es exponencialmente decreciente, vendiendo mayoría de los vehículos antes de los 50 días, solo una pequeña fracción de ellos permanece en el mercado después de los 100 días. Aproximadamente el 75 %-80% de los anuncios desaparecen antes de los 2 meses, esto sugiere un mercado activo con alta rotación para vehículos estándar. Existe un grupo reducido de vehículos (1-2%) que permanecen más de 200 días, lo que podría indicar: Problemas de precio, vehículos especializados o anuncios abandonados o duplicados.\n",
+    "Al analizar los días que un vehículo permanece en el mercado, se puede deducir que la distribución es exponencialmente decreciente, vendiendo mayoría de los vehículos antes de los 50 días, solo una pequeña fracción de ellos permanece en el mercado después de los 100 días. Aproximadamente el 75%-80% de los anuncios desaparecen antes de los 2 meses, esto sugiere un mercado activo con alta rotación para vehículos estándar. Existe un grupo reducido de vehículos (1-2%) que permanecen más de 200 días, lo que podría indicar: Problemas de precio, vehículos especializados o anuncios abandonados o duplicados.\n",
     "\n"
    ]
   },
@@ -5416,7 +5416,7 @@
    "id": "7362b0f3",
    "metadata": {},
    "source": [
-    "Para concluir, el estudio revela que el mercado de vehículos usados está dominado por autos económicos (\\$5K-\\$20K) en buen estado (\"good\"), con una clara relación inversa entre precio y kilometraje (correlación: -0.65). Los datos presentan anomalías importantes: vehículos a gasolina muestran precios promedio más altos (\\$20K) que eléctricos/híbridos (\\$10K-\\$15K), posiblemente por inclusión de modelos antiguos o segmentos premium; además, un 5% de autos permanece más de 90 días en el mercado, sugiriendo problemas de precio o demanda. Se identificaron valores atípicos extremos (hasta \\$375K) y sesgos en la distribución que requieren validación."
+    "Para concluir, el estudio revela que el mercado de vehículos usados está dominado por autos económicos (5K-20K) en buen estado (\"good\"), con una clara relación inversa entre precio y kilometraje (correlación: -0.65). Los datos presentan anomalías importantes: vehículos a gasolina muestran precios promedio más altos (20K) que eléctricos/híbridos (10K-15K), posiblemente por inclusión de modelos antiguos o segmentos premium; además, un 5% de autos permanece más de 90 días en el mercado, sugiriendo problemas de precio o demanda. Se identificaron valores atípicos extremos (hasta 375K) y sesgos en la distribución que requieren validación."
    ]
   }
  ],
